:lipstick: :: Add logo

--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -2,29 +2,34 @@
     xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
+    android:viewportWidth="80"
+    android:viewportHeight="80">
+  <group android:scaleX="0.65"
+      android:scaleY="0.65"
+      android:translateX="14"
+      android:translateY="14">
+    <path
+        android:pathData="M0,0h80v80h-80z">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="40"
+            android:startY="0"
+            android:endX="40"
+            android:endY="80"
+            android:type="linear">
+          <item android:offset="0" android:color="#FFFFA600"/>
+          <item android:offset="1" android:color="#FFCC8500"/>
+        </gradient>
+      </aapt:attr>
     </path>
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M31.659,23.413L39.301,24.99L45.657,23.596L50.286,23.596L51.756,23.816L54.585,24.66L56.091,25.1L56.973,25.466L58.443,26.236L60.831,28.546L62.705,30.783L63.403,32.066L64.137,33.716L64.836,35.183L65.093,36.32L65.717,40.28L66.011,44.277L66.195,47.137L68.399,51.17L68.473,51.537L68.509,52.454L67.812,54.324L67.187,55.094L66.305,56.121L65.864,56.634L65.178,57.147L63.635,58.027L63.366,58.027L62.888,57.954L62.411,57.844L62.08,57.624L61.86,57.294L61.786,56.011L61.933,54.727L62.411,53.627L60.978,52.087L59.876,50.877L59.435,50.254L58.406,49.704L51.756,46.844L50.874,46.807L50.14,46.954L47.494,47.614L44.923,47.834L42.204,47.43L41.873,47.577L42.351,55.46L42.204,56.451L41.542,57.697L40.734,58.577L40.073,58.981L39.375,59.237L37.501,59.384L35.811,59.347L35.186,59.127L34.635,58.761L34.452,58.321L34.378,57.881L34.525,57.331L34.709,56.854L35.664,56.047L36.509,55.387L33.496,48.97L32.321,48.017L24.091,44.644L22.879,43.764L22.144,42.663L19.241,42.7L18.102,42.7L17.11,42.553L16.155,42.077L15.788,42.04L11.453,42.37L10.387,42.085L9.028,41.013L8.623,40.647L8.072,39.95L7.411,38.923L7.374,38.703L7.411,38.373L7.521,38.117L8.072,37.64L9.983,36.283L10.387,33.166L11.012,32.396L13.29,30.38L13.4,27.63L13.51,27.116L13.73,26.676L14.245,26.273L14.722,26.163L15.273,26.273L16.118,27.116L16.339,27.116L16.596,27.006L16.963,25.649L17.037,25.393L17.331,25.173L17.888,25.051L18.543,25.246L20.931,26.786L22.034,26.75L27.949,23.743L30.41,23.339L31.659,23.413Z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M23.173,45.047L31.696,48.604L26.222,56.047L23.54,58.1L21.813,58.431L17.992,58.724L16.78,58.651L15.935,58.431L15.568,58.1L15.347,57.331L15.568,56.524L16.78,55.607L19.462,54.507L21.703,51.06L23.173,45.047Z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M51.242,47.43L58.627,50.583L57.341,51.867L54.512,56.45L54.108,57L53.631,57.404L52.345,58.284L51.61,58.54L47.752,58.687L46.797,58.43L46.43,58.21L45.952,57.88L45.878,57.587V57.11L46.136,56.267L47.091,55.35L49.883,54.104L51.353,50.877L51.242,47.43Z"
+        android:fillColor="#ffffff"/>
+  </group>
 </vector>
